add instruction slides and modified amt parts

--- a/dito/amt_connector/dito.html
+++ b/dito/amt_connector/dito.html
@@ -9,7 +9,7 @@
 <div class="mySlides fade">
 <div class="numbertext">1 / 8</div>
 <!--<img src="${Image1}" style="width:100%" />-->
-<img src="https://raw.githubusercontent.com/luise-strietzel/slurk-bots/master/dito/instruction_slides/dito_instr_001.jpg" style="width:100%" />
+<img src="https://raw.githubusercontent.com/luise-strietzel/slurk-bots/dito_task_form_2/dito/instruction_slides/dito_instr_001.jpg" style="width:100%" />
 <a class="next" onclick="plusSlides(1)">❯</a></div>
 
 <div class="mySlides fade">
@@ -42,16 +42,16 @@
 <img src="${Image7}" style="width:100%" />
 <a class="prev" onclick="plusSlides(-1)">❮</a> <a class="next" onclick="plusSlides(1)">❯</a></div>
 
-<div class="mySlides fade">
+<!--div class="mySlides fade">
 <div class="numbertext">8 / 8</div>
 <img src="${Image8}" style="width:100%" />
-<a class="prev" onclick="plusSlides(-1)">❮</a> <a class="next" onclick="plusSlides(1)">❯</a></div>
+<a class="prev" onclick="plusSlides(-1)">❮</a> <a class="next" onclick="plusSlides(1)">❯</a></div-->
 
 <div class="mySlides fade">
 <form action="https://workersandbox.mturk.com/mturk/externalSubmit.com" id="mturk_form" method="post" name="mturk_form">
 <p><input id="assignmentId" name="assignmentId" type="hidden" value="" /></p>
 
-<h1>The CoLA Game</h1>
+<h1>The DiTo CoLA Game</h1>
 
 <p style="text-align:center">Click the link below to start the game!</p>
 <p id="p1" style="text-align:center">REPLACE ME</p>
